--- a/ecommerce-ui/src/index.css
+++ b/ecommerce-ui/src/index.css
@@ -9,7 +9,13 @@ body {
 }
 
 h1 {
-  color: green;
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+h2 {
+  color: #009d00;
+  font-size: 1rem;
+  margin-bottom: 25px;
 }
 
 /* Layout */
@@ -41,7 +47,7 @@ h1 {
   width: 200px;
 }
 .bnb-card button {
-  background-color: green;
+  background-color: #009d00;
   border: none;
   border-radius: 8px;
   color: white;
@@ -64,5 +70,12 @@ h1 {
   width: 300px;
 }
 .bnb-rental button {
-  float: right;
+  background-color: #9d009d;
+  border: none;
+  border-radius: 8px;
+  color: white;
+}
+.bnb-rental button:hover {
+  background-color: slategray;
+  color: white;
 }
